Fixed text shifting on print

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,4 +66,7 @@
   body {
     @apply bg-background text-foreground;
   }
+  img {
+    @apply inline-block;
+  }
 }
